JDBC-5126 Vector Toolbox (Assistant integration - embedding table selection)